# vgmllm

./: .gitignore  GENERATION.md  LICENSE  OPUS_HANDOFF_2026-05-12.md  README.md  ROADMAP.md  V2_DESIGN.md  V4_DESIGN.md  _analyze_ch3.py  check_init.py  check_sonic.py  keep_awake.py  pyproject.toml  stats_check.py  survey_results.txt  vgmgpt.ps1
data/: bench.txt  corpus_analysis.json  corpus_analysis_output.txt  corpus_output.txt  corpus_report.txt  corpus_report2.txt  curated_games_v7.json  dataset_stats.json  pack_urls.json  patch_library_v4.json  vocab.json  vocab_v2.json
scripts/: _compare_timing.py  _debug_fm1_allregs.py  _debug_fm1_orig.py  _debug_fm1_timing.py  _debug_fm4_regs.py  _debug_intervals.py  _debug_orig_fm4.py  _inspect_fm3.py  _regen_scaled.py  _regen_v10.py  _regen_v8.py  _regen_v9.py  _scan_fm2.py  _scan_keyon.py  _scan_psg.py  analyze_corpus.py  analyze_musicality.py  bench.py  benchmark_roundtrip.py  diagnose_dataset.py  diff_tokenizer_roundtrip.py  game_histogram.py  gen_v6_free_17k.sh  gen_v6_ken_13k.sh  gen_v6_ken_17k.sh  gen_v6_ken_20k.sh  gen_v6_ken_25k.sh  gen_v6_ken_25k_cont.sh  hear_training_data.py  hear_training_data_v6.py  hear_training_data_v7.py  ken_roundtrip.py  launch_gen_13k.py  launch_gen_17k.py  launch_gen_20k.py  launch_gen_25k.py  launch_gen_free_17k.py  launch_gen_ken_25k_cont.py  piano_roll.py  regen_all_roundtrips.py  (+10 more)
scripts/dev/: analyze_loops.py  find_game.py  list_games.py  run_pipeline.py
src/genesis_music/: __init__.py  clusters_v7.py  data_pipeline.py  dataset.py  dataset_v4.py  dataset_v6.py  dataset_v7.py  generate.py  model.py  music_analysis.py  tokenizer.py  tokenizer_v2.py  tokenizer_v4.py  tokenizer_v6.py  tokenizer_v7.py  train.py  vgm_parser.py  ym2612.py  (+2 more)
tests/: test_clusters_v7.py  test_dataset_v7.py  test_generate.py  test_tokenizer.py  test_tokenizer_v2.py  test_tokenizer_v7.py  test_v4.py  test_vgm.py
